[package]
name = "bot-sslime"
version = "0.1.1-3"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.44"
dotenv = "0.15.0"
lindera = { version = "2.3.4", features = ["embed-ipadic"] }
markov = "1.1.0"
once_cell = "1.21.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.82"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6", features = [
  "mysql",
  "runtime-tokio-rustls",
  "chrono",
] }
rocket = "0.5.1"
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "rustls",
] }
anyhow = "1.0.58"
http = "1.4.0"
env_logger = "0.11.10"
log = "0.4.17"
regex = "1.6.0"
tokio-cron-scheduler = "0.7.6"
rand = { version = "0.10.0", features = ["thread_rng"] }

traq-ws-bot = "0.1.2"
