[package]
name = "bot-sslime"
version = "0.1.1-3"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.44"
dotenvy = "0.15.7"
lindera = { version = "2.3.4", features = ["embed-ipadic"] }
markov = "1.1.0"
once_cell = "1.21.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["macros", "rt-multi-thread", "time"] }
sqlx = { version = "0.8.6", features = [
  "mysql",
  "runtime-tokio-rustls",
  "chrono",
] }
reqwest = { version = "0.13.2", default-features = false, features = [
  "json",
  "query",
  "rustls",
] }
anyhow = "1.0.102"
env_logger = "0.11.10"
log = "0.4.29"
regex = "1.12.3"
tokio-cron-scheduler = "0.15.1"
rand = "0.10.0"

traq-ws-bot = "0.1.2"
